--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
     <option value="No">No</option>
   </select>
 
-  <label>Upload your Resume *</label>
-  <input type="file" name="resume" accept=".pdf,.doc,.docx" required>
+  <label>Upload your Resume</label>
+  <input type="file" name="resume" accept=".pdf,.doc,.docx">
 
   <!-- Personal Information -->
   <label>Full Legal Name *</label>
