--- a/index.html
+++ b/index.html
@@ -94,9 +94,7 @@
 </head>
 <body>
 
-<div class="logo-container">
-  <img src="https://linikaconsulting.com/logo.png" alt="Linika Consulting Logo">
-</div>
+<img src="logo.png" alt="Linika Consulting Inc. Logo" class="logo">
 
 <h2>Remote Administrative Assistant - Employment Application</h2>
 <form action="https://formspree.io/f/xqavzowo" method="POST" enctype="multipart/form-data">
