--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
 </head>
 <body>
 
-<img src="logo.png" alt="Linika Consulting Inc. Logo" class="logo">
+<div class="logo-container">
+  <img src="logo.png" alt="Linika Consulting Inc. Logo">
+</div>
 
 <h2>Remote Administrative Assistant - Employment Application</h2>
 <form action="https://formspree.io/f/xqavzowo" method="POST" enctype="multipart/form-data">
