--- a/index.html
+++ b/index.html
@@ -102,9 +102,8 @@
 <form action="https://formspree.io/f/xqavzowo" method="POST" enctype="multipart/form-data">
 
   <!-- Job Description -->
-  <label>Have you read the Job Description? *</label>
-  <select name="job_description_read" required>
-    <option value="">Select</option>
+  <label>Have you read the Job Description?</label>
+  <select name="job_description_read">
     <option value="Yes">Yes</option>
     <option value="No">No</option>
   </select>
