--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 <form action="https://formspree.io/f/xqavzowo" method="POST" enctype="multipart/form-data">
 
   <!-- Job Description -->
-  <label>Have you read the Job Description?</label>
-  <select name="job_description_read">
+  <label>Have you read the Job Description? *</label>
+  <select name="job_description_read" required>
     <option value="Yes">Yes</option>
     <option value="No">No</option>
   </select>
@@ -111,9 +111,6 @@
   <!-- Personal Information -->
   <label>Full Legal Name *</label>
   <input type="text" name="full_name" placeholder="First Middle Last" required>
-
-  <label>Age *</label>
-  <input type="number" name="age" min="18" placeholder="e.g. 23" required>
 
   <label>Street Address *</label>
   <input type="text" name="street_address" placeholder="Street Address" required>
@@ -134,7 +131,6 @@
   <select name="country" required>
     <option value="">Select Country</option>
     <option value="Canada">Canada</option>
-    <option value="United States">United States</option>
   </select>
 
   <label>Phone Number *</label>
@@ -145,24 +141,21 @@
 
   <label>Check one *</label>
   <select name="employment_type" required>
-    <option value="">Select</option>
-    <option value="Full-time">Full-time</option>
-    <option value="Part-time">Part-time</option>
+    <option value="Full-time">I am looking for a Full-time job</option>
+    <option value="Part-time">I am looking for a Part-time job</option>
   </select>
 
   <label>Date Available *</label>
   <input type="date" name="date_available" required>
 
-  <label>Are you legally eligible to work in Canada or the United States? *</label>
+  <label>Are you legally eligible to work in Canada? *</label>
   <select name="work_eligibility" required>
-    <option value="">Select</option>
     <option value="Yes">Yes</option>
     <option value="No">No</option>
   </select>
 
   <label>Are you currently employed? *</label>
   <select name="currently_employed" required>
-    <option value="">Select</option>
     <option value="Yes">Yes</option>
     <option value="No">No</option>
   </select>
@@ -185,34 +178,28 @@
   <input type="text" name="previous_city" placeholder="City">
   <input type="text" name="previous_state" placeholder="State/Province">
   <input type="text" name="previous_zip" placeholder="Postal/Zip Code">
-  <select name="previous_country">
-    <option value="">Select Country</option>
-    <option value="Canada">Canada</option>
-    <option value="United States">United States</option>
-  </select>
 
   <!-- References -->
   <h3>References (Professional Only)</h3>
-  <label>Company *</label>
-  <input type="text" name="reference_company" required>
+  <label>Company</label>
+  <input type="text" name="reference_company">
 
-  <label>Name *</label>
-  <input type="text" name="reference_name" placeholder="First Last" required>
+  <label>Name</label>
+  <input type="text" name="reference_name" placeholder="First Last">
 
-  <label>Phone Number *</label>
-  <input type="tel" name="reference_phone" required>
+  <label>Phone Number</label>
+  <input type="tel" name="reference_phone">
 
-  <label>Title *</label>
-  <input type="text" name="reference_title" required>
+  <label>Title</label>
+  <input type="text" name="reference_title">
 
-  <label>Email *</label>
-  <input type="email" name="reference_email" required>
+  <label>Email</label>
+  <input type="email" name="reference_email">
 
   <!-- Signature -->
   <h3>Signature</h3>
   <label>Did you notify your manager that you've submitted this application? *</label>
   <select name="notified_manager" required>
-    <option value="">Select</option>
     <option value="Yes">Yes</option>
     <option value="Not yet">Not yet, but I'll email her now</option>
   </select>
