--- a/index.html
+++ b/index.html
@@ -169,15 +169,15 @@
   <label>Employer Name *</label>
   <input type="text" name="previous_employer" required>
 
-  <label>Phone Number</label>
-  <input type="tel" name="previous_phone">
+  <label>Phone Number *</label>
+  <input type="tel" name="previous_phone" required>
 
-  <label>Address</label>
-  <input type="text" name="previous_address" placeholder="Street Address">
+  <label>Address *</label>
+  <input type="text" name="previous_address" placeholder="Street Address" required>
   <input type="text" name="previous_address2" placeholder="Street Address Line 2">
-  <input type="text" name="previous_city" placeholder="City">
-  <input type="text" name="previous_state" placeholder="State/Province">
-  <input type="text" name="previous_zip" placeholder="Postal/Zip Code">
+  <input type="text" name="previous_city" placeholder="City" required>
+  <input type="text" name="previous_state" placeholder="State/Province" required>
+  <input type="text" name="previous_zip" placeholder="Postal/Zip Code" required>
 
   <!-- References -->
   <h3>References (Professional Only)</h3>
